Sort of fixed the rules junimo hop issue. It no longer jumps left, but when it jumps up, it clips in an odd way that the difficulty selection junimos do not.

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 
 h1 {
     font-size: 3em;
+    padding: 10px 0px 50px 0px;
 }
 
 .container {
@@ -152,8 +153,9 @@ background-image: url('images/prairie-icon.png')
     padding: 100px;
 }
 
-#rules-box {
+.rules-box {
     display: flex;
+    flex-direction: column;
     width: 300px;
     height: 300px;
 }
